minor text changes, generated static for new speakers

--- a/templates/index.html
+++ b/templates/index.html
@@ -757,7 +757,7 @@
                              alt="Peter Kučera"/>
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Peter Kučera</h3>
-                            <p class="ts-speaker-designation">{{ _('High school Informatics teacher') }}</p>
+                            <p class="ts-speaker-designation">{{ _('High school Informatics teacher, author of Python textbooks') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
@@ -770,7 +770,7 @@
                              alt="Miroslava Šturmová"/>
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Miroslava Šturmová</h3>
-                            <p class="ts-speaker-designation">{{ _('High school Informatics teacher') }}</p>
+                            <p class="ts-speaker-designation">{{ _('High school Informatics and programming teacher') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
