--- a/templates/index.html
+++ b/templates/index.html
@@ -447,7 +447,7 @@
                             <p class="ts-speaker-designation">{{ _('Independent contractor and tester of edu app') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dygalo.jpg') }}"
@@ -457,7 +457,7 @@
                             <p class="ts-speaker-designation">{{ _('Tech Lead at Kiwi.com') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hopko.jpg') }}"
@@ -467,7 +467,7 @@
                             <p class="ts-speaker-designation">{{ _('Cloud technology enthusiast') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 2 end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 4 end -->
 
             <div class="row"><!-- row 5 start-->
@@ -480,7 +480,7 @@
                             <p class="ts-speaker-designation">{{ _('Senior Software Architect') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/pandey.jpg') }}"
@@ -490,7 +490,7 @@
                             <p class="ts-speaker-designation">{{ _('Software Engineer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/lord.jpg') }}"
@@ -500,7 +500,7 @@
                             <p class="ts-speaker-designation">{{ _('Python enthusiast and security evangelist') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 2 end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 5 end -->
 
             <div class="row"><!-- row 6 start-->
@@ -513,7 +513,7 @@
                             <p class="ts-speaker-designation">{{ _('Odoo evangelist in IMPLEMENTO') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dzurovcinova.jpg') }}"
@@ -533,7 +533,7 @@
                             <p class="ts-speaker-designation">{{ _('Data Scientist') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 6 end -->
 
             <div class="row"><!-- row 7 start-->
@@ -546,7 +546,7 @@
                             <p class="ts-speaker-designation">{{ _('Software Engineer and FOSS maintainer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 2 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/seth.jpg') }}"
@@ -556,7 +556,7 @@
                             <p class="ts-speaker-designation">{{ _('Python loving research assistant') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 2 end -->
 {#                <div class="col-xs-12 col-sm-6 col-md-4">#}
 {#                    <div class="ts-speaker transparent">#}
 {#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}"#}
@@ -564,16 +564,6 @@
 {#                        <div class="ts-speaker-info">#}
 {#                            <h3 class="ts-speaker-name">Christian Barra</h3>#}
 {#                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>#}
-{#                        </div><!-- Info end -->#}
-{#                    </div><!-- Speaker end -->#}
-{#                </div><!-- Speaker Col 1 end -->#}
-{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-{#                    <div class="ts-speaker transparent">#}
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"#}
-{#                             alt="Placeholder">#}
-{#                        <div class="ts-speaker-info">#}
-{#                            <h3 class="ts-speaker-name"></h3>#}
-{#                            <p class="ts-speaker-designation"></p>#}
 {#                        </div><!-- Info end -->#}
 {#                    </div><!-- Speaker end -->#}
 {#                </div><!-- Speaker Col 1 end -->#}
@@ -586,7 +576,7 @@
                             <p class="ts-speaker-designation">{{ _('Web developer, DevOps, manager') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 2 end -->
+                </div><!-- Speaker Col 3 end -->
             </div>
             <div class="row"><!-- row 8 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
@@ -599,7 +589,7 @@
                             <p class="ts-speaker-designation">{{ _('Machine learning engineer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hrabinova.jpg') }}"
@@ -609,7 +599,7 @@
                             <p class="ts-speaker-designation">{{ _('UX designer and marketing specialist') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/frank.jpg') }}"
@@ -666,7 +656,7 @@
                             <p class="ts-speaker-designation">{{ _('Test Lead') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/fessl.jpg') }}"
@@ -676,17 +666,17 @@
                             <p class="ts-speaker-designation">{{ _('Applications and database manager') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceras.jpg') }}"
                              alt="Anton Caceras"/>
                         <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name"></h3>
+                            <h3 class="ts-speaker-name">Anton Caceras</h3>
                             <p class="ts-speaker-designation">{{ _('Software developer and PyCon organizer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 2 end -->
             </div><!-- Content row 10 end -->
 
             <div class="row"><!-- row 11 start-->
@@ -699,17 +689,17 @@
                             <p class="ts-speaker-designation">{{ _('Python developer at booking.com') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sika.jpg') }}"
                              alt="Ondrej Sika"/>
                         <div class="ts-speaker-info">
-                            <h3 class="ts-speaker-name"></h3>
+                            <h3 class="ts-speaker-name">Ondrej Sika</h3>
                             <p class="ts-speaker-designation">{{ _('Python & DevOps Engineer from Prague') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/stehlik.png') }}"
@@ -719,10 +709,10 @@
                             <p class="ts-speaker-designation">{{ _('Python Engineer at Kiwi') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 11 end -->
 
-            <div class="row"><!-- row 11 start-->
+            <div class="row"><!-- row 12 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dikshit.jpg') }}"
@@ -732,7 +722,7 @@
                             <p class="ts-speaker-designation">{{ _('Mozilla Tech Speaker') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 3 end -->
+                </div><!-- Speaker Col 1 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/lewtak.jpg') }}"
@@ -742,7 +732,7 @@
                             <p class="ts-speaker-designation">{{ _('Python backend developer') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
-                </div><!-- Speaker Col 1 end -->
+                </div><!-- Speaker Col 2 end -->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/benko.jpg') }}"
@@ -752,8 +742,107 @@
                             <p class="ts-speaker-designation">{{ _('SysAdmin Team Lead at Exponea') }}</p>
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 12 end -->
+
+            <div class="row"><!-- row 13 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/bellayova.jpg') }}"
+                             alt="Magdaléna Bellayová"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Magdaléna Bellayová</h3>
+                            <p class="ts-speaker-designation">{{ _('High school student') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
                 </div><!-- Speaker Col 1 end -->
-            </div><!-- Content row 11 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/kupcova.jpg') }}"
+                             alt="Eva Kupčová"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Eva Kupčová</h3>
+                            <p class="ts-speaker-designation">{{ _('High school student') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/kucera.jpg') }}"
+                             alt="Peter Kučera"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Peter Kučera</h3>
+                            <p class="ts-speaker-designation">{{ _('High school Informatics teacher, author of Python textbooks') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 13 end -->
+
+            <div class="row"><!-- row 14 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sturmova.jpg') }}"
+                             alt="Miroslava Šturmová"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Miroslava Šturmová</h3>
+                            <p class="ts-speaker-designation">{{ _('High school Informatics and programming teacher') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/hrubjak.png') }}"
+                             alt="Karol Hrubjak"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Karol Hrubjak</h3>
+                            <p class="ts-speaker-designation">{{ _('Machine learning specialist and big data engineer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/zatkova.png') }}"
+                             alt="Veronika Žatková"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Veronika Žatková</h3>
+                            <p class="ts-speaker-designation">{{ _('Machine learning specialist and software developer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 14 end -->
+
+            <div class="row"><!-- row 15 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/stefanak.jpg') }}"
+                             alt="Filip Štefaňák"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Filip Štefaňák</h3>
+                            <p class="ts-speaker-designation">{{ _('Data Pipeline Team Lead at Exponea') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/lachmann.jpg') }}"
+                             alt="Gabriel Lachmann"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Gabriel Lachmann</h3>
+                            <p class="ts-speaker-designation">{{ _('Co-founder and chairman of civic organization Slovensko.Digital') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/suchal.jpg') }}"
+                             alt="Ján Suchal"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Ján Suchal</h3>
+                            <p class="ts-speaker-designation">{{ _('Software engineer, member of Slovensko.Digital') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 3 end -->
+            </div><!-- Content row 15 end -->
 
         </div><!--/ Container end -->
     </section>
