Change Kiev to Kyiv in venue template
Refs:
* https://mfa.gov.ua/en/page/open/id/5418
* https://www.youtube.com/watch?v=brWD0ZP2s9A
* https://www.kyivpost.com/ukraine-politics/kyivnotkiev-campaign-asks-foreign-media-to-change-their-spelling-of-ukraines-capital.html

--- a/templates/venue.html
+++ b/templates/venue.html
@@ -103,7 +103,7 @@
             <div class="col-md-6">
               <h3>{{ _('By bus') }}</h3>
               <p class="text-justify">
-                {{ _('All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kiev have direct bus connections.') }}
+                {{ _('All neighbouring capital cities Vienna, Prague, Budapest, Warsaw and Kyiv have direct bus connections.') }}
               </p>
               <p class="text-justify">
                 {{ _('Most of the buses will bring you to the main bus station - Mlynske Nivy. It is currently located in temporary location, so don''t
@@ -115,7 +115,7 @@
             <div class="col-md-6">
               <h3>{{ _('By train') }}</h3>
               <p class="text-justify">
-                {{ _('All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kiev have direct train connections.') }}
+                {{ _('All neighboring capital cities Vienna, Prague, Budapest, Warsaw and Kyiv have direct train connections.') }}
               </p>
               <p class="text-justify">
                 {{ _('Once you arrive at the Bratislava train station (Bratislava hlavná stanica), leave the station through the main entrance.
