--- a/templates/index.html
+++ b/templates/index.html
@@ -844,6 +844,39 @@
                 </div><!-- Speaker Col 3 end -->
             </div><!-- Content row 15 end -->
 
+            <div class="row"><!-- row 15 start-->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/valachovic.jpg') }}"
+                             alt="Peter Valachovič"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Peter Valachovič</h3>
+                            <p class="ts-speaker-designation">{{ _('Informatics teacher') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"
+                             alt="Ingrid Budau"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Ingrid Budau</h3>
+                            <p class="ts-speaker-designation">{{ _('Developer at Radar Services and flutist at University of Arts') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
+{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
+{#                    <div class="ts-speaker transparent">#}
+{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/suchal.jpg') }}"#}
+{#                             alt="Ján Suchal"/>#}
+{#                        <div class="ts-speaker-info">#}
+{#                            <h3 class="ts-speaker-name">Ján Suchal</h3>#}
+{#                            <p class="ts-speaker-designation">{{ _('Software engineer, member of Slovensko.Digital') }}</p>#}
+{#                        </div><!-- Info end -->#}
+{#                    </div><!-- Speaker end -->#}
+{#                </div><!-- Speaker Col 3 end -->#}
+            </div><!-- Content row 15 end -->
+
         </div><!--/ Container end -->
     </section>
 
