added platinum sponsors, added photos for Budau and Torres, uncommented Barra

--- a/templates/index.html
+++ b/templates/index.html
@@ -557,16 +557,19 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
-{#                <div class="col-xs-12 col-sm-6 col-md-4">#}
-{#                    <div class="ts-speaker transparent">#}
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}"#}
-{#                             alt="Christian Barra">#}
-{#                        <div class="ts-speaker-info">#}
-{#                            <h3 class="ts-speaker-name">Christian Barra</h3>#}
-{#                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>#}
-{#                        </div><!-- Info end -->#}
-{#                    </div><!-- Speaker end -->#}
-{#                </div><!-- Speaker Col 1 end -->#}
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/barra.jpg') }}"
+                             alt="Christian Barra">
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Christian Barra</h3>
+                            <p class="ts-speaker-designation">{{ _('Software Designer and PyCon organizer') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+            </div>
+
+            <div class="row"><!-- row 8 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/cimpersak.jpg') }}"
@@ -577,13 +580,10 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div>
-            <div class="row"><!-- row 8 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
-                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/empty.png') }}"/>
-{#                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.jpg') }}"#}
-{#                             alt="Jorge Torres">#}
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/torres.png') }}"
+                             alt="Jorge Torres">
                         <div class="ts-speaker-info">
                             <h3 class="ts-speaker-name">Jorge Torres</h3>
                             <p class="ts-speaker-designation">{{ _('Machine learning engineer') }}</p>
@@ -600,6 +600,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 8 end -->
+
+            <div class="row"><!-- row 9 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/frank.jpg') }}"
@@ -610,9 +613,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 8 end -->
-
-            <div class="row"><!-- row 9 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/picard.jpg') }}"
@@ -633,6 +633,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 9 end -->
+
+            <div class="row"><!-- row 10 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/wirtel.jpg') }}"
@@ -644,9 +647,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 9 end -->
-
-            <div class="row"><!-- row 10 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/kokula.png') }}"
@@ -667,6 +667,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 10 end -->
+
+            <div class="row"><!-- row 11 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/caceras.jpg') }}"
@@ -677,9 +680,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
-            </div><!-- Content row 10 end -->
-
-            <div class="row"><!-- row 11 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/tibarewala.jpg') }}"
@@ -700,6 +700,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 11 end -->
+
+            <div class="row"><!-- row 12 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/stehlik.png') }}"
@@ -710,9 +713,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 11 end -->
-
-            <div class="row"><!-- row 12 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/dikshit.jpg') }}"
@@ -733,6 +733,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 12 end -->
+
+            <div class="row"><!-- row 13 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/benko.jpg') }}"
@@ -743,9 +746,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 12 end -->
-
-            <div class="row"><!-- row 13 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/bellayova.jpg') }}"
@@ -766,6 +766,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 13 end -->
+
+            <div class="row"><!-- row 14 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/kucera.jpg') }}"
@@ -776,9 +779,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 13 end -->
-
-            <div class="row"><!-- row 14 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/sturmova.jpg') }}"
@@ -799,6 +799,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 14 end -->
+
+            <div class="row"><!-- row 15 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/zatkova.png') }}"
@@ -809,9 +812,6 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
-            </div><!-- Content row 14 end -->
-
-            <div class="row"><!-- row 15 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/stefanak.jpg') }}"
@@ -832,6 +832,9 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 2 end -->
+            </div><!-- Content row 15 end -->
+
+            <div class="row"><!-- row 15 start-->
                 <div class="col-xs-12 col-sm-6 col-md-4">
                     <div class="ts-speaker transparent">
                         <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/suchal.jpg') }}"
@@ -842,6 +845,26 @@
                         </div><!-- Info end -->
                     </div><!-- Speaker end -->
                 </div><!-- Speaker Col 3 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/valachovic.jpg') }}"
+                             alt="Peter Valachovič"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Peter Valachovič</h3>
+                            <p class="ts-speaker-designation">{{ _('Informatics teacher') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 1 end -->
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="ts-speaker transparent">
+                        <img class="img-responsive" src="{{ url_for('static', filename='images/speakers/budau.jpg') }}"
+                             alt="Ingrid Budau"/>
+                        <div class="ts-speaker-info">
+                            <h3 class="ts-speaker-name">Ingrid Budau</h3>
+                            <p class="ts-speaker-designation">{{ _('Developer at Radar Services and flutist at University of Arts') }}</p>
+                        </div><!-- Info end -->
+                    </div><!-- Speaker end -->
+                </div><!-- Speaker Col 2 end -->
             </div><!-- Content row 15 end -->
 
         </div><!--/ Container end -->
