--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -20,6 +20,54 @@
       </div><!--/ Title row end -->
 
       <div class="row text-center">
+        <h3 class="sponsor-title">{{ _('Platinum Sponsors') }}</h3>
+
+        <div class="col-xs-12">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/kiwi.svg') }}" alt="Kiwi logo"/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Kiwi.com</h4>
+              <p>
+                {{ _('Kiwi.com is an online travel agency with groundbreaking Virtual Interlining '
+                     'technology and a focus on exceptional customer service. Our unique combination '
+                     'algorithm allows our customers to combine flights from non-cooperating airlines '
+                     'onto a single itinerary, often resulting in significant savings.') }}
+              </p>
+              <div class="sponsor-web-link">
+                <a href="https://www.kiwi.com/en/" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.linkedin.com/company/Kiwi.com" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://twitter.com/kiwicom247" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/kiwicom247" target="_blank"><i class="fa fa-facebook"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 1 end -->
+
+        <div class="col-xs-12">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/psf.svg') }}" alt="Python Software Foundation"/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Python Software Foundation</h4>
+              <p>
+                {{ _('The Python Software Foundation is a 501(c)(3) nonprofit dedicated to advancing '
+                     'and promoting Python. The PSF supports and encourages Python events world-wide '
+                     'to advance its mission of growing the international community of Python programmers, '
+                     'and hosts the North American PyCon conference as its flagship annual event.') }}
+              </p>
+              <div class="sponsor-web-link">
+                <a href="https://www.python.org/psf/" target="_blank"><i class="fa fa-globe"></i></a>
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 2 end -->
+      </div><!--/ Content row 1 end -->
+
+
+
+
+
+
+      <div class="row text-center">
         <h3 class="sponsor-title">{{ _('Gold Sponsors') }}</h3>
 
         <div class="col-xs-12 col-sm-6 col-md-6">
@@ -59,9 +107,9 @@
               </p>
               <div class="sponsor-web-link">
                 <a href="https://www.titans.sk/" target="_blank"><i class="fa fa-globe"></i></a>
-                <a href="https://www.facebook.com/TitansFreelancers" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com/TITANS3lancers" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="https://www.linkedin.com/company/titans-freelancers-s-r-o" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://twitter.com/TITANS3lancers" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/TitansFreelancers" target="_blank"><i class="fa fa-facebook"></i></a>
               </div>
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
@@ -84,9 +132,9 @@
               </p>
               <div class="sponsor-web-link">
                 <a href="https://www.redhat.com/en" target="_blank"><i class="fa fa-globe"></i></a>
-                <a href="https://www.facebook.com/RedHatEMEA/?brand_redir=11218770329" target="_blank"><i class="fa fa-facebook"></i></a>
-                <a href="https://twitter.com/RedHat" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a href="http://www.linkedin.com/company/red-hat" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://twitter.com/RedHat" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://www.facebook.com/RedHatEMEA/?brand_redir=11218770329" target="_blank"><i class="fa fa-facebook"></i></a>
               </div>
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
