--- a/templates/sponsoring.html
+++ b/templates/sponsoring.html
@@ -292,8 +292,23 @@
                 <a href="https://www.facebook.com/nexteria.itclub/" target="_blank"><i class="fa fa-facebook"></i></a>
 {#                <a href="https://twitter.com/slidoapp" target="_blank"><i class="fa fa-twitter"></i></a>#}
 {#                <a href="https://www.linkedin.com/company/sli-do" target="_blank"><i class="fa fa-linkedin"></i></a>#}
-{#                <a href="https://www.instagram.com/slidoapp/" target="_blank"><i class="fa fa-instagram"></i></a>#}
-{#                <a href="https://www.youtube.com/user/slidoapp" target="_blank"><i class="fa fa-youtube"></i></a>#}
+              </div>
+            </div><!-- Info end -->
+          </div><!-- Sponsor details -->
+        </div><!-- Col 4 end -->
+        <!--NEXT ROW -->
+        <div class="col-xs-12 col-sm-3 col-md-3">
+          <div class="sponsor-details">
+            <img class="img-responsive" src="{{ url_for('static', filename='images/partners/megabooks.png') }}" alt=""/>
+            <div class="sponsor-info">
+              <h4 class="sponsor-name">Megabooks SK</h4>
+              <p>&nbsp;</p>
+              <div class="sponsor-web-link">
+                <a href="https://www.megabooks.sk/" target="_blank"><i class="fa fa-globe"></i></a>
+                <a href="https://www.facebook.com/oxfordbookshopsk" target="_blank"><i class="fa fa-facebook"></i></a>
+{#                <a href="#" target="_blank"><i class="fa fa-twitter"></i></a>#}
+{#                <a href="#" target="_blank"><i class="fa fa-linkedin"></i></a>#}
+                <a href="https://instagram.com/oxfordbookshop/" target="_blank"><i class="fa fa-instagram"></i></a>
               </div>
             </div><!-- Info end -->
           </div><!-- Sponsor details -->
